src/test/deca/syntax/valid/self/no_such_file.deca
// Description:
//    tests de programme lexicalement correct mais sans fichier correspondant
//
// Resultats:
//    Ligne 12 : Pas de fichier correspondant
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 06/01/2022

{
#include "calcul.deca"
}